syntax = "proto3";

option java_multiple_files = true;
option java_package = "dev.kropholler.demo.grpc.generated";
option java_outer_classname = "NotificationProto";

package notification;

service NotificationService {
  rpc StreamNotifications(NotificationsSubscribeRequest) returns (stream Notification);
}

message NotificationsSubscribeRequest {
  string user_id = 1;
}

message Notification {
  string user_id = 1;
  string message = 2;
  int64 timestamp = 3;
}
